# shaft

./: .gitignore  README.md  pyproject.toml  single_model.py
data/curves/leaves/: curves.npy  info.csv
data/curves/shells/: curves.npy  info.csv
data/curves/vases/: curves.npy  info.csv
data/surfaces/: shrec_info.csv
data/surfaces/shrec/: 0.vtk  1.vtk  10.vtk  100.vtk  101.vtk  102.vtk  103.vtk  104.vtk  105.vtk  106.vtk  107.vtk  108.vtk  109.vtk  11.vtk  110.vtk  111.vtk  112.vtk  113.vtk  114.vtk  115.vtk  116.vtk  117.vtk  118.vtk  119.vtk  12.vtk  120.vtk  121.vtk  122.vtk  123.vtk  124.vtk  125.vtk  126.vtk  127.vtk  128.vtk  129.vtk  13.vtk  130.vtk  131.vtk  132.vtk  133.vtk  (+560 more)
examples/basics/: cheburashka.py  curves.py  surfaces.py
examples/curve_classification/: classification.py  preprocessing.py
examples/surface_classification/: compute_coefs.py  dna_baseline.py  ot_classification.py  single_model.py
exemples/basics/: curves.py
exemples/curve_classification/: leaves.py  shells.py  vases.py
exemples/surface_classification/: compute_coefs.py  dna_baseline.py
exemples/surface_classification/trying_things/: multi_model.py  multi_no_reduce.py  no_reduce.py
playground/: curve_comparison.py  surface_comparison.py
playground/breaking_stuff/curves/: example.py
playground/breaking_stuff/surfaces/: example.py
playground/curves/: fourier.py
playground/surfaces/: fourier.py
shaft/: __init__.py
shaft/curves/: __init__.py  fourier_transforms.py  utils.py
shaft/surfaces/: __init__.py  fourier_transforms.py  taylor_monsters.py  utils.py
(+9 files in other folders)
